# klattsch-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml  package-lock.json  package.json  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml
crates/klattsch-core/: Cargo.toml  README.md
crates/klattsch-core/src/: dsp.rs  lib.rs  live.rs  params.rs  phonemes.rs  schedule.rs  synth.rs
crates/klattsch-text/: Cargo.toml  README.md
crates/klattsch-text/examples/: bench_render.rs
crates/klattsch-text/src/: compile.rs  lib.rs  normalize.rs  tokenize.rs
crates/klattsch-text/tests/: parity.rs  parity_diag.rs
crates/klattsch-wasm/: Cargo.toml  README.md
crates/klattsch-wasm/js/: formant-processor.js
crates/klattsch-wasm/src/: lib.rs
crates/klattsch-wav/: Cargo.toml  README.md
crates/klattsch-wav/examples/: render_to_wav.rs
crates/klattsch-wav/src/: lib.rs
tests/golden/: manifest.json
tools/: bench-js.mjs  render-goldens.mjs
