[workspace]
resolver = "2"
members = [
    "crates/klattsch-core",
    "crates/klattsch-text",
    "crates/klattsch-wav",
    "crates/klattsch-wasm",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
rust-version = "1.77"
license = "MIT"
authors = ["Tony Gies <tgies@tgies.net>"]
repository = "https://github.com/tgies/klattsch-rs"
homepage = "https://tgies.github.io/klattsch/"

[workspace.dependencies]
# Internal crates
klattsch-core = { version = "0.1.1", path = "crates/klattsch-core" }
klattsch-text = { version = "0.1.1", path = "crates/klattsch-text" }
klattsch-wav = { version = "0.1.1", path = "crates/klattsch-wav" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Text processing
unicode-normalization = "0.1"

# Realtime audio SPSC
rtrb = "0.3"

# WASM bindings
wasm-bindgen = "0.2"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
wasm-bindgen-test = "0.3"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
unused_must_use = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
similar_names = "allow"
many_single_char_names = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.bench]
debug = true
