[package]
name = "klattsch-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "WebAssembly + AudioWorklet build of the klattsch speech synthesizer."
publish = false
readme = "../../README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
klattsch-core = { workspace = true }
klattsch-text = { workspace = true }
klattsch-wav = { workspace = true }
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
serde = { workspace = true }
serde-wasm-bindgen = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lints]
workspace = true
